data/all_generated_tests/raw_wast_tests/br_if_IncorrectConditionEvaluation_1684.wast
;; 5. **Test Description:** Test `br_if` with condition values from dynamic calculations, ensuring runtime evaluations trigger correct branching.    - **Specific Constraint:** Assess condition evaluated from operand stack values derived from calculations.    - **Relation to Incorrect Condition Evaluation:** Checks dynamic condition handling and branch decision logic.

(assert_invalid
  (module
    (func $dynamic-operand-condition
      (block
        (i32.const 10)
        (i32.const 20)
        (i32.add)
        (br_if 0)
      )
    )
  )
  "type mismatch"
)